--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -282,7 +282,7 @@
                             <label style="font-size: medium;">Color</label>
                         </div>
                         <select id="select_color" class="group-select selectize-control single selectize-input">
-                            <option value="cc_species" selected>Cover crop species</option>
+                            <option value="cc_species" selected>Cover crop types</option>
                             <option value="region">NOAA Climate Regions</option>
                             <option value="previous_crop">Cash crop prior</option>
                         </select>
@@ -833,7 +833,7 @@
                     .append("circle")
                     .attr("cx", function (d) { return scale(d.properties[property]); })
                     .attr("cy", function (d) { return yScale(d.properties.cc_biomass); })
-                    .attr("r", 3)
+                    .attr("r", 5)
                     .style("fill", function (d) { return color_scale((d.properties[color_property])); })
                     .style("stroke", "#252525")
                     .on("mouseover", function (d) {
