changed species to type in map

--- a/wisccc/templates/wisccc/wisc_cc_map_toggle.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_toggle.html
@@ -290,7 +290,7 @@
 
                             <select id="PropertySelection"
                                 class="PropSelector selectize-control single selectize-input">
-                                <option value="cc_species">Cover crop species</option>
+                                <option value="cc_species">Cover crop type</option>
                                 <option value="previous_crop">Prior cash crop</option>
                                 <option value="cc_biomass">Cover crop biomass (tons dm/acre)</option>
                                 <option value="fq_rfq">Relative forage quality</option>
