changed title to Wisconsin Citizen Science Cover Crop Project

--- a/templates/home.html
+++ b/templates/home.html
@@ -117,9 +117,8 @@
       <h1 style="font-size:50px">Projects</h1>
       <h4><a href="{% url 'soils_in_depth' %}">Exploring soils in depth</a>: easily view SSURGO data properties</h4>
       <h4><a href="{% url 'kanopy_home' %}">Green CovR</a>: portal for submitting cover crop photos</h4>
-      <h4><a href="{% url 'wisc_cc_home' %}">Wisconsin Cover Crop Citizen Science Project</a>: Gathering data about
-        cover
-        crops in Wisconsin</h4>
+      <h4><a href="{% url 'wisc_cc_home' %}">Wisconsin Growers Citizen Science Network</a>: , a project of the Soil
+        Health Agricultural Research & Education (SHARE) collaborative</h4>
     </div>
   </div>
   <script src="{% static 'js/popper.min.js' %}"></script>
