--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -1,7 +1,7 @@
 {% extends 'wisccc/base_wisccc.html' %}
 {% load static %}
 
-{% block title %}Welcome to Wisconsin Citizen Science Cover Crop Project {% endblock %}
+{% block title %}Welcome to Wisconsin Growers Citizen Science Network {% endblock %}
 
 {% block content %}
 
