--- a/wisccc/templates/wisccc/delete_response.html
+++ b/wisccc/templates/wisccc/delete_response.html
@@ -1,6 +1,6 @@
 {% extends 'wisccc/base_wisccc.html' %}
 {% load static %}
-{% block title %}Wisconsin Citizen Science Cover Crop Project {% endblock %}
+{% block title %}Wisconsin Growers Citizen Science Network {% endblock %}
 
 
 {% block content %}
