--- a/wisccc/templates/wisccc/response_table.html
+++ b/wisccc/templates/wisccc/response_table.html
@@ -1,6 +1,6 @@
 {% extends 'wisccc/base_wisccc.html' %}
 {% load static %}
-{% block title %}Wisconsin Citizen Science Cover Crop Project {% endblock %}
+{% block title %}Wisconsin Growers Citizen Science Network {% endblock %}
 
 {% load render_table from django_tables2 %}
 {% load bootstrap4 %}
