--- a/wisccc/templates/wisccc/wisc_cc_map_toggle.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_toggle.html
@@ -170,7 +170,7 @@
 
 
 
-    <title>Wisconsin Citizen Science Cover Crop Project</title>
+    <title>Wisconsin Growers Citizen Science Network</title>
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" />
 
@@ -224,7 +224,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Citizen Science Cover Crop Project</a>
+            <a class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Growers Citizen Science Network</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
