couple more instances of title change

--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -9,9 +9,8 @@
 {% block body %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a style="font-family: Helvetica" class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Citizen
-    Science Cover
-    Crop Project</a>
+  <a style="font-family: Helvetica" class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Growers
+    Science Network</a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,7 +72,7 @@
       <div class="card">
         <div class="card-body">
           <h1 class="card-title logo text-center">
-            <a href="{% url 'wisc_cc_home' %}">Wisconsin Citizen Science<br>Cover Crop Project</a>
+            <a href="{% url 'wisc_cc_home' %}">Wisconsin Growers<br>Citizen Science Network</a>
           </h1>
         </div>
       </div>
