--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -10,7 +10,7 @@
     <div class="card">
       <div class="card-body">
         <h3 class="card-title">Welcome</h3>
-        <p>Since 2020, the Wisconsin Citizen Science Cover Crop project has been collecting information from farmers
+        <p>Since 2020, the Wisconsin Growers Citizen Science Network has been collecting information from farmers
           around the state on their cover crop practices and results. You can explore that data via the interactive map
           and graphs below. For more information on the project background and methods, please visit the <a
             href="https://www.michaelfields.org/soil-health" target="_blank" rel="noopener noreferrer">Michael Fields
