--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,8 @@
       </button>
       <div class="collapse navbar-collapse" id="mainMenu">
         <ul class="nav navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="{% url 'wisc_cc_home' %}">Wisc Cover Crop Project</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'wisc_cc_home' %}">Wisconsin Growers Citizen Science
+              Network</a></li>
           <!-- <li class="nav-item"><a class="nav-link" href="{% url 'book_list' %}">Add Book</a></li> -->
           <!-- <li class="nav-item"><a class="nav-link" href="#">Kanopy</a></li> -->
         </ul>
