--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -10,11 +10,12 @@
     <div class="card">
       <div class="card-body">
         <h3 class="card-title">Welcome</h3>
-        <p>Since 2020, the Wisconsin Growers Citizen Science Network has been collecting information from farmers
-          around the state on their cover crop practices and results. You can explore that data via the interactive map
-          and graphs below. For more information on the project background and methods, please visit the <a
-            href="https://www.michaelfields.org/soil-health" target="_blank" rel="noopener noreferrer">Michael Fields
-            website</a>.
+        <p>Since 2020, we've been gather information shared by farmers around the state on ther cover crop and other
+          soil health practices.
+          You can explore that data via the interactive map and graphs below.
+          For more information on the project please visit the <a href="https://www.michaelfields.org/soil-health"
+            target="_blank" rel="noopener noreferrer">Michael Fields Agricultural Institute
+          </a> website.
         </p>
         <div class="card-deck">
 
@@ -58,13 +59,14 @@
         </div>
         <hr>
         <p>Interested in participating? We welcome growers with all levels of experience and types of production
-          systems. Click <a href="https://forms.gle/xPC9b78eCVKPmk6B6">HERE to preregister.</a></p>
+          systems. Click <a href="https://forms.gle/xPC9b78eCVKPmk6B6">HERE to register.</a></p>
         <img style="display: block; margin-left: auto; margin-right: auto; width: 25%;"
           src="{% static 'img/qrcode_for_further.png' %}" />
         <hr>
         <br>
-        <p>We are grateful to our Soil Health Collaborative partners the USDA-ARS Dairy Forage Research Center &
-          UW-Madison's Center for Integrated Agricultural Systems, and to our collaborating Wisconsin farmers. </p>
+        <p>We are grateful to our collaborating Wisconsin farmers and our Soil Health Agricultural Research & Education
+          (SHARE) project partners: the USDA-ARS Dairy Forage Research Center, The Nature Conservancy, UW-Madison's
+        </p>
         {% if perms.wisccc.survery_manager %}
         <br>
         <div class="card">
