--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -9,7 +9,7 @@
 {% block body %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a style="font-family: Helvetica" class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Growers
+  <a style="font-family: Helvetica" class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Growers Citizen
     Science Network</a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
