updated some language in how to use graph

--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -425,36 +425,37 @@
                     </h3>
                 </div>
                 <div class="modal-body">
-                    <p>This graph shares farmer data about how cover crops grow in Wisconsin. Each colored data point
-                        represents cover crop information for one field from a farmer who completed a survey in fall
-                        2020, 2021, or 2022.
+                    <p>This graph shares farmer data about how cover crops grow in Wisconsin.
+                        Each colored data dot represents one field from a farmer who completed a survey and collected
+                        crop samples in fall 2020, 2021, 2022, or 2023.
                     </p>
-                    <p>The graph illustrates the relationship between cover crop biomass (how much
-                        of the cover crop was present above ground) and different factors which could influence how well
-                        it grew.
+                    <p>You can change filters to explore relationships between cover crop biomass (how much the cover
+                        crop grew) and different factors which could influence that growth.
                     </p>
-                    <p><label style="font-size: medium;">X-Axis:</label> Here, can choose to visualize the relationship
-                        between biomass and total
-                        precipitation,
-                        growing degree units*, or planting date.
+                    <p><label style="font-size: medium;">Click</label> on colored points for a popup box with specifics
+                        on county, cover crop types, and fertility management.
                     </p>
-                    <p><label style="font-size: medium;">Change color:</label> You can use the colors to explore data by
-                        climate region**, cover crop
-                        species, or
-                        crop planted prior to cover crop.</p>
-                    <p><label style="font-size: medium;">Filters:</label> Explore the relationship between cover crop
-                        biomass and factors such as county, tillage, cover crop species and more.
-                        (Note that our database is built on input from about 100 farms, and if you select many filters
-                        at once, you may end up with very few data points to display or the
-                        graph may be empty.)</p>
-                    <p><label style="font-size: medium;">Regression line:</label> Toggle to visualize the statistical
-                        relationship between cover crop
-                        biomass and
-                        the
-                        selected growth variable. When checked, you will see a regression line, an equation representing
-                        the
+                    <p><label style="font-size: medium;">X (horizontal) axis:</label> Cover crop biomass is a measure of
+                        how well the cover crop grew before sampling. Samples are dried and then weighed, and reported
+                        as “ton DM/acre” or tons of drymatter per acre.
+                    </p>
+                    <p><label style="font-size: medium;">Colors:</label> You can change the dot colors to explore
+                        results by climate region**, cover crop species, or crop planted prior to cover crop.
+                    </p>
+                    <p><label style="font-size: medium;">Filters:</label>
+                        Down below you can choose specific county,
+                        tillage, specific crop species and more. (Note that our database is built on input from over
+                        100 farms, and if you select many filters at once, you may end up with very few or no data
+                        points to display.)
+
+                    </p>
+                    <p><label style="font-size: medium;">Trend line:</label>
+                        Toggle to visualize the statistical relationship between cover crop biomass and the selected
+                        growth variable. When checked, you will see a regression line, an equation representing the
                         statistical relationship of the variables, and a brief sentence describing how much variation is
-                        explained by the select growth factor.</p>
+                        explained by the select growth factor.
+
+                    </p>
 
                     <p><label style="font-size: medium;">Hover</label> over colored points for details from individual
                         farmers where we have them,
@@ -462,11 +463,9 @@
                         planting
                         rate and manure application if used.</p>
                     <hr>
-                    <p><label style="font-size: medium;">*Growing degree units</label> are a measure of how much heat
-                        has
-                        accumulated over a season. This can
-                        indicate
-                        how favorable were conditions for plants.
+                    <p><label style="font-size: medium;">*Growing degree units</label>
+                        are a measure of how much heat has accumulated over a season.
+                        This can indicate how favorable were conditions for plants.
                     <p><label style="font-size: medium;">**Climate regions</label> are areas delineated by the <a
                             target="_blank" rel="noopener noreferrer"
                             href="https://www.ncei.noaa.gov/access/monitoring/reference-maps/conus-climate-divisions">National
