updated name again on homepage

--- a/templates/home.html
+++ b/templates/home.html
@@ -104,8 +104,8 @@
           <li class="list-group-item">Green CovR: portal for submitting cover crop photos</li>
         </a>
         <a href="{% url 'wisc_cc_home' %}">
-          <li class="list-group-item">Wisconsin Cover Crop Citizen Science Project: Gathering data about
-            cover crops in Wisconsin</li>
+          <li class="list-group-item">Wisconsin Growers Citizen Science Network, a project of the Soil
+            Health Agricultural Research & Education (SHARE) collaborative</li>
         </a>
       </ul>
 
