added go to graph button

--- a/wisccc/templates/wisccc/wisc_cc_map_toggle.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_toggle.html
@@ -306,8 +306,8 @@
                         <span>Manure applied post cover crop establishment
                             <input type="checkbox" id="PostManFilter" class="PreManSelector">
                         </span>
-
-
+                        <br>
+                        <a href="{% url 'wisc_cc_graph' %}" class="btn btn-primary">Go to graph</a>
 
                     </div>
 
